Feature: add separated EnableExternalCommands for run/compile
