# docs/api/swagger.json
@@ -429,9 +429,15 @@
             }
           },
           "EnableExternalCommands": {
-            "type": "boolean",
+            "type": "string",
             "description": "It allows overriding CompileCmd and RunCmd in each request.",
-            "default": false
+            "enum": [
+              "none",
+              "run",
+              "compile",
+              "all"
+            ],
+            "default": "all"
           }
         },
         "required": [
